--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "homepage": "https://vandobkdn.github.io/portfolio/",
   "dependencies": {
-    "gh-pages": "^3.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0"
@@ -13,7 +12,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "build:css": "postcss src/styles/tailwind.css -o src/styles/main.css",
-    "deploy": "yarn build && gh-pages -d build"
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -25,6 +25,7 @@
     "@tailwindcss/postcss7-compat": "^2.0.2",
     "autoprefixer": "^10.2.3",
     "classnames": "^2.2.6",
+    "gh-pages": "^3.1.0",
     "postcss": "^8.2.4",
     "postcss-cli": "^8.0.0",
     "postcss-nested": "^5.0.3",
